# haproxy-ingress-otel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  mise.toml  versions.env
.github/: dependabot.yml
.github/workflows/: check-upstream.yaml  ci.yaml  docker.yaml  main.yaml
docker/: otel.lua
e2e/: README.md  docker-compose.yaml  e2e.sh  haproxy.cfg  helm-values.yaml  jaeger-ui.json  kind-config.yaml  kind-e2e.sh  run.sh  test-app.yaml
e2e/k8s/: 00-namespaces.yaml  01-jaeger.yaml  02-haproxy-ingress.yaml  03-test-app.yaml
lua/: otel.lua
module/: Cargo.toml
module/src/: lib.rs
src/: cache.rs  exporter.rs  filter.rs  lib.rs  runtime.rs  span.rs
tests/: Cargo.toml  haproxy.cfg  haproxy.lua
tests/src/: lib.rs
