[package]
name = "haproxy-otel"
version = "0.2.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"
repository = "https://github.com/khvzak/haproxy-otel"
autotests = false
readme = "README.md"
keywords = ["haproxy", "opentelemetry"]
license = "MIT"
description = "HAProxy OpenTelemetry tracing support"

[workspace]
members = ["module", "tests"]

[dependencies]
mlua = { version = "0.11.1", features = ["macros"] }
haproxy-api = { version = "0.9.0" }
opentelemetry = { version = "0.30", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.30", default-features = false, features = [
    "trace",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
] }
opentelemetry-http = "0.30"
opentelemetry-otlp = { version = "0.30", default-features = false, features = [
    "http-proto",
    "http-json",
    "trace",
    "reqwest-client",
] }
opentelemetry-zipkin = { version = "0.30", default-features = false }
opentelemetry-jaeger-propagator = "0.30"
quick_cache = "0.6.14"
const-hex = "1.14.1"
# Override reqwest to use rustls instead of native-tls (avoids glibc __res_init)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "hickory-dns",
] }
